--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,12 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/maven,eclipse,intellij
+/.idea/.gitignore
+/.idea/.name
+/.idea/compiler.xml
+/.idea/encodings.xml
+/.idea/jarRepositories.xml
+/.idea/misc.xml
+/.idea/vcs.xml
+/.classpath
+/.project
